# pd_lode_runner

./: .gitignore  CMakeLists.txt  README.md  TODO.md  engine  libs  meson.build
Source/: pdex.elf  pdxinfo
Source/assets/levels/: scenes.json
assets/fonts/: font.qoi
docs/: AI.md  Data Driven Gamer_ Championship Lode Runner_ Guard psychology and analysis of the C code.html
docs/Data Driven Gamer_ Championship Lode Runner_ Guard psychology and analysis of the C code_files/: 1839367302-comment_from_post_iframe.js  2165624756-lbx.js  3681588378-lightbox_bundle.css  6264881409789872629.html  anchor.html  api.js  m=_b,_tp
src/: draw_text.c  entity_def_custom.h  game_main.c  game_main.h  gold.c  guard.c  map_astar.c  map_hint.c  map_hint.h  options.c  pit.c  player.c  render_custom.h  state.c  state.h  trap.c
tools/: adjust_exposure.sh  mount.sh  prep_sfx.sh  prepare_assets.sh  prettify.sh  push.sh  qoaconv  qoiconv  unmount.sh
